--- a/Frontend/index.css
+++ b/Frontend/index.css
@@ -23,8 +23,7 @@ img {
   padding: 12px 24px;
   border-radius: 4px;
   text-decoration: none;
-  color: white;
-  background-color: #4caf50;
+  background-color: #270072;
   border: none;
   transition: background-color 0.3s ease;
   margin-left: 10px;
