--- a/Frontend/index.css
+++ b/Frontend/index.css
@@ -66,7 +66,7 @@ li {
   text-decoration: underline;
 }
 .nav__link--primary {
-  border: 2px solid purple;
+  border: 2px solid red;
   border-radius: 4px;
 }
 .nav__link--primary:hover {
@@ -142,7 +142,7 @@ li {
 /* Landing Page */
 
 #landing {
-  background-color: rgba(115, 66, 214, 0.1);
+  background-color: rgba(255, 0, 0, 0);
 }
 header {
   height: calc(100vh - 80px);
@@ -409,7 +409,7 @@ button:active {
   }
 }
 
-@media (max-width: 600px) {
+@media (max-width: 656px) {
   .nav__links {
     display: none;
   }
