--- a/Frontend/index.css
+++ b/Frontend/index.css
@@ -242,6 +242,11 @@ button:active {
   align-items: center;
   flex-direction: column;
 }
+.staus__highlight{
+  align-items: center;
+  width: 100%;
+
+}
 .highlight__img {
   padding: 24px;
   border: 2px solid rgba(128, 0, 128, 0.315);
