--- a/Frontend/index.css
+++ b/Frontend/index.css
@@ -262,8 +262,8 @@ button:active {
 }
 .highlight__img {
   padding: 24px;
-  border: 2px solid rgba(128, 0, 128, 0.315);
-  color: rgba(128, 0, 128, 1);
+  border: 2px solid rgba(128, 0, 0, 0.315);
+  color: rgb(128, 0, 0);
   width: 100px;
   height: 100px;
   display: flex;
@@ -348,8 +348,8 @@ button:active {
 }
 
 .footer__logo--img {
-  width: 160px;
-  filter: grayscale(1) invert(1);
+  width: 140px;
+  margin: 24px 0;
 }
 .footer__link,
 .footer__copyright {
