--- a/Frontend/index.css
+++ b/Frontend/index.css
@@ -201,6 +201,7 @@ button:active {
 #highlights {
   position: relative;
   max-width: 100vw;
+  background-color: rgba(255, 0, 0, 0.215);
 }
 #highlights:after,
 #highlights:before {
@@ -265,7 +266,7 @@ button:active {
 /* Status Section */
 
 #StatusId{
-  
+  background-color: rgba(255, 0, 0, 0.215);
 }
 
 
@@ -274,7 +275,7 @@ button:active {
 
 /* Features */
 #features {
-  background-color: rgba(255, 0, 0, 0.215);
+  background-color: #f5f5f5;
   height: auto;
   padding-top: 8vw;
 }
