Added meta tags

--- a/Frontend/index.css
+++ b/Frontend/index.css
@@ -96,7 +96,7 @@ li {
   font-size: 40px;
   border: none;
   text-align: center;
-  color: #7342d6;
+  color: #ffc8c8;
   display: none;
 }
 .menu__backdrop {
