--- a/Frontend/login.css
+++ b/Frontend/login.css
@@ -3,6 +3,7 @@ body {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
+  background-color: #f6f6f6;
 }
 
 /* Header Styles */
@@ -42,7 +43,7 @@ h1 {
 }
 
 .admin-btn {
-  background-color: white;
+  background-color: #f6f6f6;
   color: #ffc8c8;
   border: 2px solid #ffc8c8;
 }
@@ -58,27 +59,27 @@ h1 {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  height: calc(100vh - 80px);
+  height: 100vh;
 }
 
 form {
   display: flex;
   flex-direction: column;
-  width: 300px;
-  background-color: white;
+  width: 350px;
+  background-color: #f6f6f6;
   border: 1px solid #ccc;
   padding: 16px;
   border-radius: 4px;
 }
 
 label {
-  font-size: 16px;
-  margin-bottom: 8px;
+  font-size: 22px;
+  margin-bottom: 12px;
 }
 
 input[type="text"],
 input[type="password"] {
-  padding: 8px;
+  padding: 12px;
   border: 1px solid #ccc;
   border-radius: 4px;
   margin-bottom: 16px;
@@ -90,7 +91,7 @@ button[type="submit"] {
   border: none;
   border-radius: 4px;
   padding: 8px 16px;
-  font-size: 16px;
+  font-size: 22px;
   cursor: pointer;
 }
 
