--- a/Frontend/login.css
+++ b/Frontend/login.css
@@ -26,6 +26,12 @@ h1 {
   margin: 0;
 }
 
+/* Main Styles */
+main{
+  display: flex;
+  justify-content: center;
+}
+
 /* Button Styles */
 .btn {
   display: inline-block;
@@ -33,7 +39,7 @@ h1 {
   padding: 8px 16px;
   border: none;
   border-radius: 4px;
-  font-size: 16px;
+  font-size: 22px;
   cursor: pointer;
 }
 
@@ -134,8 +140,17 @@ button[type="submit"]:hover {
 
 /* Media Queries */
 
+@media(max-width: 500px){
+  .btn{
+    font-size: 20px;
+  }
+}
+
 @media(max-width: 320px){
   #login-form{
     width: 80%;
+  }
+  .btn{
+    font-size: 16px;
   }
 }
