--- a/Frontend/index.css
+++ b/Frontend/index.css
@@ -51,7 +51,7 @@ a:hover {
   margin: 0 auto;
 }
 .color {
-  color: red;
+  color:  #f10000;
 }
 
 /* Logo will fit with screen changing */
@@ -88,7 +88,7 @@ li {
 }
 
 .text-red {
-  color: #fc7376;
+  color: #f76467;
 }
 
 .btn__menu {
